[package]
name = "windlass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "io-util", "macros", "time", "sync"] }
tokio-util = { version = "0.7" }
futures = "0.3"
thiserror = "1"
paste = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev_dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
rand = "0.8"
